// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CustomItemModel story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      text="Test 1 Number Alt"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      text="Test 1 String Alt"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      text="Test 2 Alt"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3 Alt"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4 Alt"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;

exports[`Renders Empty story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    ui5-multi-combobox=""
    value-state="None"
  />
</div>
`;

exports[`Renders Standard story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      text="Test 1 Number"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      text="Test 1 String"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      text="Test 2"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;

exports[`Renders WithMultiValue story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    tokenizer-available=""
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      selected="true"
      text="Test 1 Number"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      selected="true"
      text="Test 1 String"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      selected="true"
      text="Test 2"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;

exports[`Renders WithValue story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    tokenizer-available=""
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      text="Test 1 Number"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      text="Test 1 String"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      selected="true"
      text="Test 2"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;

exports[`Renders WithValueNumber story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    tokenizer-available=""
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      selected="true"
      text="Test 1 Number"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      text="Test 1 String"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      text="Test 2"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;

exports[`Renders WithValueString story 1`] = `
<div>
  <ui5-multi-combobox
    filter="StartsWithPerTerm"
    style="--_ui5-v1-19-1-input-icons-count: 1;"
    tokenizer-available=""
    ui5-multi-combobox=""
    value-state="None"
  >
    <ui5-mcb-item
      data-index="0"
      text="Test 1 Number"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="1"
      selected="true"
      text="Test 1 String"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="2"
      text="Test 2"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="3"
      text="Test 3"
      ui5-mcb-item=""
    />
    <ui5-mcb-item
      data-index="4"
      text="Test 4"
      ui5-mcb-item=""
    />
  </ui5-multi-combobox>
</div>
`;
